<resources>

    <string name="app_name">OMTP</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="contact_number">CONTACT NUMBER</string>
    <string name="date">EXPIRATION DATE</string>
    <string name="e_mail">E-mail</string>
    <string name="cardnumber">CARD NUMBER</string>
    <string name="password_0_9">CVV</string>
    <string name="submit">Submit</string>
    <array name="quantity">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
    </array>
    <array name="movie">
        <item>Star Wars</item>
        <item>Jumanji</item>
        <item>Ford vs ferrari</item>
        <item>P.S.I still love you</item>
        <item>War</item>
    </array>
    <array name="time">
        <item>10:30 to 1:00</item>
        <item>1:30 to 4:00</item>
        <item>4:30 to 6:00</item>
        <item>6:30 to 9:00</item>
    </array>
</resources>


